-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b15
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243993 | 11.0.8 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
When building with xlc16/xlclang, we still have a couple of warnings that have to be fixed :
warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
for example :
/nightly/jdk/src/hotspot/os/aix/libodm_aix.cpp:81:18: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
odmWrapper odm("product", "/usr/lib/objrepos"); // could also use "lpp"
^
/nightly/jdk/src/hotspot/os/aix/libodm_aix.cpp:81:29: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
odmWrapper odm("product", "/usr/lib/objrepos"); // could also use "lpp"
^
warning: comparison of distinct pointer types, for example :
/nightly/jdk/src/java.desktop/aix/native/libawt/porting_aix.c:50:14: warning: comparison of distinct pointer types ('void *' and 'char *') [-Wcompare-distinct-pointer-types]
addr < (((char*)p->ldinfo_textorg) + p->ldinfo_textsize)) {
~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
for example :
/nightly/jdk/src/hotspot/os/aix/libodm_aix.cpp:81:18: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
odmWrapper odm("product", "/usr/lib/objrepos"); // could also use "lpp"
^
/nightly/jdk/src/hotspot/os/aix/libodm_aix.cpp:81:29: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
odmWrapper odm("product", "/usr/lib/objrepos"); // could also use "lpp"
^
warning: comparison of distinct pointer types, for example :
/nightly/jdk/src/java.desktop/aix/native/libawt/porting_aix.c:50:14: warning: comparison of distinct pointer types ('void *' and 'char *') [-Wcompare-distinct-pointer-types]
addr < (((char*)p->ldinfo_textorg) + p->ldinfo_textsize)) {
~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- backported by
-
JDK-8243993 fix xlc16/xlclang comparison of distinct pointer types and string literal conversion warnings
-
- Resolved
-