8228482: fix xlc16/xlclang comparison of distinct pointer types and string literal conversion warnings

Reviewed-by: clanger, mdoerr